...
            android:layout_gravity="center"
            android:background="@android:color/transparent" />

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/addBtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="right|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/pdf_button"
...
