<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/deb_pres"
        android:title="@string/pref_title_enable_deb_pres" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/deb_speech_audio_key"
        android:title="@string/pref_title_enable_deb_speech_audio" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="deb_statistics_export"
        android:title="Экспорт статистики" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/deb_test_folder_inst"
        android:title="@string/test_folder_mode" />

</PreferenceScreen>
